# rusqsieve

./: .gitignore  CLAUDE-AUDIT.md  Cargo.toml  Makefile  README.md  SPEC.md
docs/: index.css  index.html  index.js  numtheory.js  rusqsieve.wasm  worker.js
js/: coordinator.js  index.js  protocol.js  worker.js
src/: engine.rs  factor.rs  factors.rs  lib.rs  native.rs  primality.rs  progress.rs  smallfactor.rs  wasm.rs
src/f2/: mod.rs
src/natural/: mod.rs
src/qs/: mod.rs
src/work/: mod.rs
tests/: cli.rs  factorization.rs
web/: abi.js  index.css  index.js  numtheory.js  serve.mjs  worker.js
