[package]
name = "rusqsieve"
version = "0.1.0"
edition = "2024"
description = "Portable fixed-capacity integer factorization with scheduler-independent quadratic-sieve kernels"
license = "Apache-2.0 OR MPL-2.0"
authors = ["metastable-void"]

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["cli"]
cli = []
relation-checks = []
arch-optimized = []
wasm-simd128 = []
reference-qs = []
# Cap `Natural`'s default capacity (and the SIQS engine width) at 8 limbs (512
# bits) instead of 16 (1024 bits), halving each value's storage and rejecting
# inputs above 512 bits. On a scalar (SSE2) build this measures marginally
# SLOWER for 192-256-bit inputs (the sieve's arithmetic scales with significant
# limbs, not capacity). But a 512-bit value is exactly two AVX2 registers, so
# paired with AVX2 (`-C target-cpu=x86-64-v3`) the fixed-width ops vectorize
# cleanly and this becomes the fastest configuration measured. AVX-512 is worse
# than AVX2 here — its frequency throttling outweighs the wider registers.
limit-to-512-bits = []


[[bin]]
name = "qs-factor"
path = "src/bin/qs-factor.rs"
required-features = ["cli"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1

[dev-dependencies]
num-bigint = { version = "0.5.1" }
